2003-06-18  Peter Stephenson  <pws@csr.com>

	* unposted: README, Etc/NEWS, Config/version.mk: version 4.1.1,
	finally.

2003-06-05  Oliver Kiddle  <opk@zsh.org>

	* 18607: Completion/Unix/Command/_rlogin: correctly handle
	quoting for remote files for rcp completion

2003-06-05  Peter Stephenson  <pws@csr.com>

	* users/6154: Src/subst.c: anchors didn't work with //
	parameter substitution.

	* 18526 tweaked (c.f. 18527): Completion/Base/Utility/_arguments,
	Completion/Base/Utility/_describe, Doc/Zsh/compsys.yo:
	fix use of style prefix-needed in _arguments by adding an
	option -O to _describe.

2003-06-03  Peter Stephenson  <pws@csr.com>

	* 18600: Src/pattern.c: bug matching against [[:xdigit:]].

2003-05-30  Oliver Kiddle  <opk@zsh.org>

	* 18587: Src/Modules/langinfo.c: fix bug where only the beginning
	of the association key was compared so MON_10 would match MON_1

2003-05-28  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk, Completion/Unix/Command/.distfiles,
	Completion/X/Command/.distfiles: zsh-4.1.1-test-3.

2003-05-24  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 18578: Src/builtin.c: changet to OPT_ISSET() in 18559
	affected some tests which should have been using OPT_PLUS().

2003-05-22  Peter Stephenson  <pws@csr.com>

	* 18569: Src/subst.c: error with numeric sorting of parameters;
	owing to typo pointers could become corrupt.

	* 18559, 18562: README, Doc/Zsh/mod_socket.yo, Doc/Zsh/mod_tcp.yo,
	Doc/Zsh/zle.yo, Src/zsh.h, Src/Modules/files.c,
	Src/Modules/socket.c, Src/Modules/tcp.c Src/Zle/zle_keymap.c
	Src/Zle/zle_main.c: zsocket -d, ztcp -d, bindkey -M and
	mkdir -m now take arguments of their own instead of swallowing the
	first normal argument.  Also upgrade comment in README for 18512.

2003-05-21  Peter Stephenson  <pws@csr.com>

	* 18565: Src/subst.c, Test/D04parameter.ztst: when ${(u)...}
	reduced an array from more than one element to example one
	stuff happened.

2003-05-19  Peter Stephenson  <pws@csr.com>
